Ejercicio sin finalizar sobre el proyecto de arquitectura hexagonal