@@ -2,7 +2,6 @@ package com.ejemplo.infrastructure.adapter.out.persistence;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Repository;
 
@@ -16,35 +15,28 @@ import lombok.RequiredArgsConstructor;
 public class JpaTaskRepositoryAdapter implements TaskRepositoryPort {
 
   private final SpringDataTaskRepository springDataTaskRepository;
-  private final TaskPersintenceMapper mapper;
+  private final TaskPersistenceMapper taskPersistenceMapper;
 
-	@Override
+  @Override
   public Task save(Task task) {
-    task.initDefaults();
-    TaskJpaEntity entity = mapper.toJpaEntity(task);
-    TaskJpaEntity saved = springDataTaskRepository.save(entity);
-    return mapper.toDomain(saved);
+    TaskJpaEntity taskJpaEntity = taskPersistenceMapper.toJpaEntity(task);
+    TaskJpaEntity saved = springDataTaskRepository.save(taskJpaEntity);
+    return taskPersistenceMapper.toDomain(saved);
   }
 
   @Override
   public Optional<Task> findById(long id) {
-    return springDataTaskRepository.findById(id).map(mapper::toDomain);
+    return springDataTaskRepository.findById(id).map(taskPersistenceMapper::toDomain);
   }
 
   @Override
   public List<Task> findAll() {
-    return springDataTaskRepository.findAll().stream()
-      .map(mapper::toDomain)
-      .collect(Collectors.toList());
+    return springDataTaskRepository.findAll().stream().map(taskPersistenceMapper::toDomain).toList();
   }
 
   @Override
-  public void delete(long id) {
-    Task task = findById(id).get();
-    TaskJpaEntity entity = mapper.toJpaEntity(task);
-    //TaskJpaEntity deleted = springDataTaskRepository.findById(task.getId()).get();
-    springDataTaskRepository.delete(entity);
-    //return mapper.toDomain(deleted);
+  public void deleteById(long id) {
+    springDataTaskRepository.deleteById(id);
   }
 
 }
